--- a/apps/atuin/values.yaml
+++ b/apps/atuin/values.yaml
@@ -37,6 +37,7 @@ app-template:
                 httpGet: *httpGet
                 failureThreshold: 30
                 periodSeconds: 10
+          securityContext:
             allowPrivilegeEscalation: false
             readOnlyRootFilesystem: true
             capabilities:
