atuin: Fix secret store namespace

--- a/platform/git/templates/k8s-secret-store/secret-store.yaml
+++ b/platform/git/templates/k8s-secret-store/secret-store.yaml
@@ -2,11 +2,10 @@ apiVersion: external-secrets.io/v1beta1
 kind: SecretStore
 metadata:
   name: k8s-store
-  namespace: git
 spec:
   provider:
     kubernetes:
-      remoteNamespace: git
+      remoteNamespace: atuin
       server:
         url: https://kubernetes.default.svc.cluster.local
         caProvider:
