atuin: Fix git secret store

--- a/platform/git/templates/k8s-secret-store/secret-store.yaml
+++ b/platform/git/templates/k8s-secret-store/secret-store.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   provider:
     kubernetes:
-      remoteNamespace: atuin
+      remoteNamespace: git
       server:
         url: https://kubernetes.default.svc.cluster.local
         caProvider:
