atuin: Remove `"` from database secret

--- a/apps/atuin/templates/postgres-secret.yaml
+++ b/apps/atuin/templates/postgres-secret.yaml
@@ -11,7 +11,7 @@ spec:
     template:
       data:
         database: |
-          ATUIN_DB_URI=postgresql://{{`"{{ .username }}"`}}:{{`"{{ .password }}"`}}@atuin-postgres/atuin
+          ATUIN_DB_URI=postgresql://{{`{{ .username }}`}}:{{`{{ .password }}`}}@atuin-postgres/atuin
   dataFrom:
     - extract:
         key: atuin.atuin-postgres.credentials.postgresql.acid.zalan.do
