--- a/apps/atuin/values.yaml
+++ b/apps/atuin/values.yaml
@@ -17,6 +17,7 @@ app-template:
             ATUIN_METRICS__HOST: 0.0.0.0
             ATUIN_METRICS__PORT: &metricsPort 9090
             ATUIN_TLS__ENABLE: "false"
+            RUST_LOG: info
           envFrom:
             - secretRef:
                 name: atuin-database
