--- a/apps/atuin/values.yaml
+++ b/apps/atuin/values.yaml
@@ -12,7 +12,7 @@ app-template:
           env:
             ATUIN_HOST: 0.0.0.0
             ATUIN_PORT: &port 8080
-            ATUIN_OPEN_REGISTRATION: "false"
+            ATUIN_OPEN_REGISTRATION: "true"
             ATUIN_METRICS__ENABLE: "true"
             ATUIN_METRICS__HOST: 0.0.0.0
             ATUIN_METRICS__PORT: &metricsPort 9090
