--- a/platform/git/Chart.yaml
+++ b/platform/git/Chart.yaml
@@ -2,6 +2,6 @@ apiVersion: v2
 name: gitea
 version: 0.0.0
 dependencies:
-  - name: gitea
-    version: 10.4.1
-    repository: https://dl.gitea.io/charts/
+  - name: forgejo
+    version: 9.0.0
+    repository: oci://code.forgejo.org/forgejo-helm
