kanidm: Add `db_fs_type = "zfs"`

--- a/system/kanidm/values.yaml
+++ b/system/kanidm/values.yaml
@@ -47,6 +47,7 @@ app-template:
           #
           trust_x_forward_for = true
           db_path = "/data/kanidm.db"
+          db_fs_type = "zfs"
           tls_chain = "/data/tls/tls.crt"
           tls_key = "/data/tls/tls.key"
           log_level = "info"
