kanidm: Sleep to vacuum database

--- a/system/kanidm/values.yaml
+++ b/system/kanidm/values.yaml
@@ -12,7 +12,9 @@ app-template:
           image:
             repository: kanidm/server
             tag: 1.3.3
-
+          command:
+            - /usr/bin/sleep
+            - inf
           resources:
             requests:
               cpu: 10m
