qbittorrent: Add strategy recreate
To avoid two instances running at the same time

--- a/apps/qbittorrent/values.yaml
+++ b/apps/qbittorrent/values.yaml
@@ -4,6 +4,7 @@ app-template:
       labels:
         backup/retain: quaterly
       replicas: 1
+      strategy: Recreate
       containers:
         qbittorrent:
           image:
