qbittorrent: Change to statefulset
`strategy: recreate` didn't work because the pod was stuck in
`Terminating` state.

--- a/apps/qbittorrent/values.yaml
+++ b/apps/qbittorrent/values.yaml
@@ -4,7 +4,7 @@ app-template:
       labels:
         backup/retain: quaterly
       replicas: 1
-      strategy: Recreate
+      type: statefulset
       containers:
         qbittorrent:
           image:
