argocd: Add affinity to keep it in amd64
After automatic prusik restart, controller changed to odroid and it got 67 degrees
in the CPU until I moved it

--- a/bootstrap/argocd/values.yaml
+++ b/bootstrap/argocd/values.yaml
@@ -1,4 +1,14 @@
 argo-cd:
+  global:
+    affinity:
+      podAntiAffinity: soft
+      nodeAffinity:
+        type: hard
+        matchExpressions:
+          - key: beta.kubernetes.io/arch
+            operator: In
+            values:
+              - amd64
   configs:
     cm:
       create: true
