nginx: Add memory limits

--- a/system/ingress-nginx-external/values.yaml
+++ b/system/ingress-nginx-external/values.yaml
@@ -171,6 +171,8 @@ ingress-nginx:
           successThreshold: 1
           timeoutSeconds: 1
         resources:
+          limits:
+            memory: 128Mi
           requests:
             cpu: 10m
             memory: 13Mi
