--- a/apps/esphome/config/packages/connection.yaml
+++ b/apps/esphome/config/packages/connection.yaml
@@ -4,8 +4,10 @@ api:
     key: !secret home_assistant_api_key
 
 ota:
-  safe_mode: true
-  password: !secret ota_password
+  - platform: esphome
+    password: !secret ota_password
+
+safe_mode:
 
 mdns:
   disabled: false
