cross-backups: Add dabol

--- a/apps/cross-backups/templates/external-secrets-users.yaml
+++ b/apps/cross-backups/templates/external-secrets-users.yaml
@@ -22,3 +22,7 @@ spec:
       remoteRef:
         key: /cross-backup/users
         property: millaPassword
+    - secretKey: dabolPassword
+      remoteRef:
+        key: /cross-backup/users
+        property: dabolPassword
