--- a/apps/cross-backups/values.yaml
+++ b/apps/cross-backups/values.yaml
@@ -85,11 +85,34 @@ minio:
             - "s3:GetBucketLocation"
             - "s3:ListBucket"
             - "s3:ListBucketMultipartUploads"
+    - name: dabolReadWritePolicy
+      statements:
+        - effect: Allow
+          resources:
+            - 'arn:aws:s3:::dabol/*'
+          actions:
+            - "s3:AbortMultipartUpload"
+            - "s3:GetObject"
+            - "s3:DeleteObject"
+            - "s3:PutObject"
+            - "s3:ListMultipartUploadParts"
+        - resources:
+            - 'arn:aws:s3:::dabol/'
+          actions:
+            - "s3:CreateBucket"
+            - "s3:DeleteBucket"
+            - "s3:GetBucketLocation"
+            - "s3:ListBucket"
+            - "s3:ListBucketMultipartUploads"
   users:
     - accessKey: milla
       existingSecret: cross-backups-users
       existingSecretKey: millaPassword
       policy: millaReadWritePolicy
+    - accessKey: dabol
+      existingSecret: cross-backups-users
+      existingSecretKey: dabolPassword
+      policy: dabolReadWritePolicy
     ## Username, password and policy to be assigned to the user
     ## Default policies are [readonly|readwrite|writeonly|consoleAdmin|diagnostics]
     ## Add new policies as explained here https://min.io/docs/minio/kubernetes/upstream/administration/identity-access-management.html#access-management
@@ -106,6 +129,14 @@ minio:
 
   buckets:
     - name: milla
+      # Policy to be set on the
+      # bucket [none|download|upload|public]
+      policy: none
+      # Purge if bucket exists already
+      purge: false
+      versioning: false
+      objectlocking: false
+    - name: dabol
       # Policy to be set on the
       # bucket [none|download|upload|public]
       policy: none
