--- a/platform/velero/templates/cross-backup-bis/external-secret.yaml
+++ b/platform/velero/templates/cross-backup-bis/external-secret.yaml
@@ -8,7 +8,7 @@ spec:
     kind: ClusterSecretStore
     name: vault
   target:
-    name: rclone-config
+    name: rclone-config-bis
     template:
       engineVersion: v2
       data:
