velero: Fix rclone-config-bis name

--- a/platform/velero/templates/cross-backup-bis/external-secret.yaml
+++ b/platform/velero/templates/cross-backup-bis/external-secret.yaml
@@ -2,7 +2,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: rclone-config
+  name: rclone-config-bis
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
