--- a/apps/telegram-bot/values.yaml
+++ b/apps/telegram-bot/values.yaml
@@ -88,6 +88,15 @@ app-template:
   defaultPodOptions:
     enableServiceLinks: false
 
+    affinity:
+      nodeAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          nodeSelectorTerms:
+            - matchExpressions:
+                - key: kubernetes.io/arch
+                  operator: In
+                  values:
+                    - amd64
     topologySpreadConstraints:
       - maxSkew: 1
         topologyKey: kubernetes.io/hostname
