nextcloud: Fix auto upgrade

--- a/apps/nextcloud/values.yaml
+++ b/apps/nextcloud/values.yaml
@@ -189,6 +189,9 @@ nextcloud:
         );
 
     extraEnv:
+      # workaround for fix auto-update with postgres with SSL enabled
+      - name: HOME
+        value: ""
       - name: REDIS_HOST
         value: redis
       - name: REDIS_HOST_PORT
