nextcloud: Change post-upgrade to before-starting hook
For testing hook and execute it now.

--- a/apps/nextcloud/values.yaml
+++ b/apps/nextcloud/values.yaml
@@ -185,7 +185,7 @@ nextcloud:
         );
 
     hooks:
-      post-upgrade: |
+      before-starting: |
         #!/bin/bash
         set -e
         /var/www/html/occ maintenance:repair --include-expensive
