nextcloud: Change hook to post-upgrade again and enable minor and patch automerge

--- a/apps/nextcloud/values.yaml
+++ b/apps/nextcloud/values.yaml
@@ -185,7 +185,7 @@ nextcloud:
         );
 
     hooks:
-      before-starting: |
+      post-upgrade: |
         #!/bin/bash
         set -e
         /var/www/html/occ maintenance:repair --include-expensive
