--- a/bootstrap/argocd/values.yaml
+++ b/bootstrap/argocd/values.yaml
@@ -74,6 +74,7 @@ argo-cd:
       controller.status.processors: 5
       controller.operation.processors: 5
       controller.repo.server.timeout.seconds: 300
+      controller.diff.server.side: "true"
 
       server.insecure: true
 
