--- a/apps/bazarr/values.yaml
+++ b/apps/bazarr/values.yaml
@@ -77,7 +77,7 @@ app-template:
         external-dns.alpha.kubernetes.io/enabled: "true"
         external-dns.alpha.kubernetes.io/target: grigri.cloud
         cert-manager.io/cluster-issuer: letsencrypt-prod-dns
-        nginx.ingress.kubernetes.io/auth-url: https://auth.grigri.cloud/oauth2/auth?allowed_groups=bazarr-users
+        nginx.ingress.kubernetes.io/auth-url: https://auth.grigri.cloud/oauth2/auth?allowed_groups=bazarr-users@idm.grigri.cloud
         nginx.ingress.kubernetes.io/auth-signin: https://auth.grigri.cloud/oauth2/start
         nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
       hosts:
