--- a/apps/kroki/values.yaml
+++ b/apps/kroki/values.yaml
@@ -31,8 +31,8 @@ app-template:
               cpu: 10m
               memory: 128Mi
             limits:
-              cpu: 200m
-              memory: 512Mi
+              cpu: 1
+              memory: 3Gi
 
   defaultPodOptions:
     automountServiceAccountToken: false
