nginx: Proxy ignore Expires header

--- a/apps/kroki/values.yaml
+++ b/apps/kroki/values.yaml
@@ -67,6 +67,10 @@ app-template:
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-prod-dns
         external-dns.alpha.kubernetes.io/enabled: "true"
+        nginx.ingress.kubernetes.io/configuration-snippet: |
+          proxy_cache static-cache;
+          proxy_cache_valid 200 7d;
+          add_header X-Cache-Status $upstream_cache_status;
       hosts:
         - host: &host kroki.internal.grigri.cloud
           paths:
