--- a/apps/kroki/values.yaml
+++ b/apps/kroki/values.yaml
@@ -71,6 +71,7 @@ app-template:
           proxy_cache static-cache;
           proxy_cache_valid 200 7d;
           add_header X-Cache-Status $upstream_cache_status;
+          proxy_hide_header Expires;
       hosts:
         - host: &host kroki.internal.grigri.cloud
           paths:
@@ -94,6 +95,7 @@ app-template:
           proxy_cache static-cache;
           proxy_cache_valid 200 7d;
           add_header X-Cache-Status $upstream_cache_status;
+          proxy_hide_header Expires;
 
       hosts:
         - host: &host kroki.grigri.cloud
