kroki: Fix proxy hide header separator

--- a/apps/kroki/values.yaml
+++ b/apps/kroki/values.yaml
@@ -71,7 +71,7 @@ app-template:
           proxy_cache static-cache;
           proxy_cache_valid 200 7d;
           add_header X-Cache-Status $upstream_cache_status;
-          proxy_hide_header Expires, Date, Last-Modified;
+          proxy_hide_header Expires Date Last-Modified;
       hosts:
         - host: &host kroki.internal.grigri.cloud
           paths:
@@ -95,7 +95,7 @@ app-template:
           proxy_cache static-cache;
           proxy_cache_valid 200 7d;
           add_header X-Cache-Status $upstream_cache_status;
-          proxy_hide_header Expires, Last-Modified;
+          proxy_hide_header Expires Last-Modified;
 
       hosts:
         - host: &host kroki.grigri.cloud
