--- a/apps/kroki/values.yaml
+++ b/apps/kroki/values.yaml
@@ -91,6 +91,7 @@ app-template:
         external-dns.alpha.kubernetes.io/enabled: "true"
         external-dns.alpha.kubernetes.io/target: grigri.cloud
         cert-manager.io/cluster-issuer: letsencrypt-prod-dns
+        nginx.ingress.kubernetes.io/proxy-buffering: "on"
         nginx.ingress.kubernetes.io/server-snippet: |
           proxy_cache static-cache;
           proxy_cache_valid 200 7d;
